Fix POM to always use JDK 13.